# bc_python_aula20

./: README.md  docker-compose.yaml  pyproject.toml
Backend/: Dockerfile  crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
Frontend/: Dockerfile  app.py
Frontend/.streamlit/: config.toml
